# github-ci-test

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: workflow.yml
include/: lib.h
src/: lib.cpp  main.cpp
test/: lib.specs.cpp
